🆕 Add topic model and controller
